CompiladorSolstice/CompiladorSolstice/VM3_Avance_A0045665_A01087523/Parser.cpp


#include <wchar.h>
#include "Parser.h"
#include "Scanner.h"




void Parser::SynErr(int n) {
	if (errDist >= minErrDist) errors->SynErr(la->line, la->col, n);
	errDist = 0;
}

void Parser::SemErr(const wchar_t* msg) {
	if (errDist >= minErrDist) errors->Error(t->line, t->col, msg);
	errDist = 0;
}

void Parser::Get() {
	for (;;) {
		t = la;
		la = scanner->Scan();
		if (la->kind <= maxT) { ++errDist; break; }
		if (la->kind == _comentarios) {
		}

		if (dummyToken != t) {
			dummyToken->kind = t->kind;
			dummyToken->pos = t->pos;
			dummyToken->col = t->col;
			dummyToken->line = t->line;
			dummyToken->next = NULL;
			coco_string_delete(dummyToken->val);
			dummyToken->val = coco_string_create(t->val);
			t = dummyToken;
		}
		la = t;
	}
}

void Parser::Expect(int n) {
	if (la->kind==n) Get(); else { SynErr(n); }
}

void Parser::ExpectWeak(int n, int follow) {
	if (la->kind == n) Get();
	else {
		SynErr(n);
		while (!StartOf(follow)) Get();
	}
}

bool Parser::WeakSeparator(int n, int syFol, int repFol) {
	if (la->kind == n) {Get(); return true;}
	else if (StartOf(repFol)) {return false;}
	else {
		SynErr(n);
		while (!(StartOf(syFol) || StartOf(repFol) || StartOf(0))) {
			Get();
		}
		return StartOf(syFol);
	}
}

void Parser::Solstice() {
		c = Cubo(); 
		availNum = 0;
		type = ctype = vis = dim = -1;
		name = "";
		gi = gd = gb = gs = li = ld = lb = ls = ti = td = tb = ts = ci = cd = cb = cs = tp = mo = 0;
		className = "";
		err = false;
		cts.insert(CTS::value_type("1", Constantes(INT, bci + ci)));
		ci++;
		gen.push_back(Cuadruplo(MAI, gen.size(), -1 , -1));
		Class();
		Main();
}

void Parser::Class() {
		string ext = ""; className = ""; dirProc.clear();
		Expect(_tCla);
		Expect(_idO);
		className = conv(t->val); 
		if (la->kind == _tExt) {
			Get();
			Expect(_idO);
			ext = conv(t->val);
			if(dirGral.find(ext) != dirGral.end()){
			for(CTABLE::iterator i = dirGral[ext].attributes.begin() ; 
			i != dirGral[ext].attributes.end(); 
			i++){
			if(i->second.att_vis != PRIVATE){
			dirProc.insert(CTABLE::value_type(i->first, i->second));
			}
			}
			}else{
			cout << "PARENT CLASS NOT DECLARED!\n";
			err = true;
			}
		}
		Expect(40 /* "{" */);
		Bloque();
		Expect(41 /* "}" */);
		if(dirGral.find(className) == dirGral.end()){
		dirGral.insert(TABLE::value_type(className, ClassStruct(ext, dirProc)));
		}else{
		cout << "CLASS PREVIOUSLY DECLARED!\n";
		}
		if (la->kind == _tCla) {
			Class();
		}
}

void Parser::Main() {
		Expect(_tMai);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(3, MAIN, 0)));
		vis = type = -1;
		} else {
		cout << "CANNOT DECLARE MORE THAN ONE MAIN." << '\n';
		err = TRUE;
		}
		Expect(38 /* "(" */);
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		gen[0].op1 = gen.size();
		li = ld = lb = ls = ti = td = tb = ts = 0;
		while (StartOf(1)) {
			Decl();
		}
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
		if(dirGral.find("main") == dirGral.end()){
		dirGral.insert(TABLE::value_type("main", ClassStruct("", dirProc)));
		}
		gen.push_back(Cuadruplo(END, -1, -1, -1));
}

void Parser::Arr() {
		Expect(34 /* "[" */);
		Expect(_cteI);
		dim = atoi(&conv(t->val)[0]);
		if(dim < 2){
		cout << "ARRAY SIZE MUST BE GREATER THAN ONE!\n";
		}
		Expect(35 /* "]" */);
}

void Parser::Arr2() {
		Expect(34 /* "[" */);
		CVariable o = operandos.top();
		operandos.pop();
		CVariable q;
		if(o.var_dim < 1){
		cout << "VARIABLE IS NOT AN ARRAY!\n";	
		err = true;
		}
		oper.push(PAR);
		ExpOY();
		if(oper.top() == PAR){
		oper.pop();
		}
		if(!operandos.empty()){
		q = operandos.top();
		operandos.pop();
		if(q.var_type == INT){
		gen.push_back(Cuadruplo(VER, q.dir, -1, o.var_dim));
		int mem = btp + tp;
		if(mem > ltp){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		tp++;
		gen.push_back(Cuadruplo(ACC, q.dir, o.dir, mem));
		operandos.push(CVariable(o.name, o.var_type, 0, mem));
		}else{
		cout << "EXPRESSION MUST BE INT TYPE!\n";	
		err = true;
		}
		}else{
		cout << "ERROR!\n";	
		err = true;
		}
		Expect(35 /* "]" */);
}

void Parser::ExpOY() {
		int mem = 0;
		Expresion();
		while (la->kind == 46 /* "&" */ || la->kind == 47 /* "|" */) {
			if(!oper.empty() && (oper.top() == AND || 
			oper.top() == OR)){
			CVariable o2 = operandos.top();
			operandos.pop();
			CVariable o1 = operandos.top();
			operandos.pop();
			int op = oper.top();
			oper.pop();
			if(c.cubo[o1.var_type][o2.var_type][op] != -1&& 
			o1.var_dim < 2 &&
			o1.var_dim == o2.var_dim){
			mem = btb + tb;
			if(mem > ltb){
			cout << "OUT OF MEMORY!\n";
			err = true;
			}
			tb++;
			gen.push_back(Cuadruplo(op, o1.dir, o2.dir, mem));
			operandos.push(CVariable("memoria",c.cubo[o1.var_type][o2.var_type][op], 0, mem));
			availNum++;
			} else {
			cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
			err = TRUE;
			}
			}
			if (la->kind == 46 /* "&" */) {
				Get();
				oper.push(AND); 
			} else {
				Get();
				oper.push(OR); 
			}
			Expresion();
		}
		if(!oper.empty() && (oper.top() == AND || 
		oper.top() == OR)){
		CVariable o2 = operandos.top();
		operandos.pop();
		CVariable o1 = operandos.top();
		operandos.pop();
		int op = oper.top();
		oper.pop();
		if(c.cubo[o1.var_type][o2.var_type][op] != -1 && 
		o1.var_dim < 2 &&
		o1.var_dim == o2.var_dim){
		mem = btb + tb;
		if(mem > ltb){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		tb++;
		gen.push_back(Cuadruplo(op, o1.dir, o2.dir, mem));
		operandos.push(CVariable("memoria" ,c.cubo[o1.var_type][o2.var_type][op], 0, mem));
		availNum++;
		} else {
		cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
		err = TRUE;
		}
		}
}

void Parser::Asig() {
		if (la->kind == _tInc || la->kind == _tDec || la->kind == 37 /* "=" */) {
			if (la->kind == _tInc) {
				Get();
				if(operandos.top().var_type == INT && operandos.top().var_dim < 2){
				gen.push_back(Cuadruplo(SUM, operandos.top().dir, cts["1"].dir , operandos.top().dir));
				operandos.pop();
				} else {
				cout << "TYPE MISMATCH! :" << operandos.top().name << '\n';
				operandos.pop();
				err = TRUE;
				}
			} else if (la->kind == _tDec) {
				Get();
				if(operandos.top().var_type == INT && operandos.top().var_dim < 2){
				gen.push_back(Cuadruplo(SUB, operandos.top().dir, cts["1"].dir , operandos.top().dir));
				operandos.pop();
				} else {
				cout << "TYPE MISMATCH! :" << operandos.top().name << '\n';
				operandos.pop();
				err = TRUE;
				}
			} else {
				Asig2();
			}
		} else if (la->kind == 34 /* "[" */) {
			Arr2();
			Asig2();
		} else SynErr(56);
		Expect(36 /* ";" */);
}

void Parser::Asig2() {
		Expect(37 /* "=" */);
		ExpOY();
		CVariable q = operandos.top();
		operandos.pop();
		CVariable p = operandos.top();
		operandos.pop();
		if(c.cubo[q.var_type][p.var_type][ASI] != -1 && 
		p.var_dim == q.var_dim){
		gen.push_back(Cuadruplo(ASI, q.dir, -1 , p.dir));
		} else {
		cout << "TYPE MISMATCH! :" << p.name << '\t' << q.name << '\n';
		err = TRUE;
		}
}

void Parser::Atributo() {
		name = ""; vis = type = -1;
		Vis();
		Tipo();
		Expect(_idV);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		int mem = 0;
		switch (type){
		case INT:	mem = bgi + gi;
		if(mem > lgi){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gi++;
		break;
		case DOUBLE:	mem = bgd + gd;
		if(mem > lgd){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gd++;
		break;
		case STRING:	mem = bgs + gs;
		if(mem > lgs){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gs++;
		break;
		case BOOLEAN:	mem = bgb + gb;
		if(mem > lgb){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gb++;
		break;
		}
		dirProc.insert(CTABLE::value_type(name, Attribute(vis, type, 0, mem)));
		} else {
		cout << "PREVIOUSLY DECLARED ATTRIBUTE: " << name << '\n';
		err = TRUE;
		}
		
		Expect(36 /* ";" */);
}

void Parser::Vis() {
		if (la->kind == _tPub) {
			Get();
			vis = PUBLIC; 
		} else if (la->kind == _tPri) {
			Get();
			vis = PRIVATE; 
		} else if (la->kind == _tPro) {
			Get();
			vis = PROTECT; 
		} else SynErr(57);
}

void Parser::Tipo() {
		if (la->kind == _tInt) {
			Get();
			type = INT; 
		} else if (la->kind == _tDou) {
			Get();
			type = DOUBLE; 
		} else if (la->kind == _tStr) {
			Get();
			type = STRING; 
		} else if (la->kind == _tBoo) {
			Get();
			type = BOOLEAN; 
		} else SynErr(58);
}

void Parser::Bloque() {
		Atributo();
		while (la->kind == _tPub || la->kind == _tPri || la->kind == _tPro) {
			Atributo();
		}
		Constructor();
		while (la->kind == _tPub || la->kind == _tPri || la->kind == _tPro) {
			Vis();
			if (StartOf(3)) {
				MetodoR();
			} else if (la->kind == _tVoi) {
				MetodoV();
			} else SynErr(59);
		}
}

void Parser::Constructor() {
		name = ""; vis = type = -1; li = ld = lb = ls = ti = td = tb = ts = 0;
		Expect(_idC);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(PUBLIC, OBJECT, 1)));
		} else {
		cout << "CANNOT DECLARE MORE THAN ONE CONSTRUCTOR." << '\n';
		err = TRUE;
		}
		Expect(38 /* "(" */);
		if (StartOf(3)) {
			Param();
		}
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (la->kind == _idV) {
			Init();
		}
		Expect(41 /* "}" */);
}

void Parser::MetodoR() {
		vis = type = -1; li = ld = lb = ls = ti = td = tb = ts = 0;
		Tipo();
		Expect(_idM);
		name = conv(t->val);
		int mem = 0;
		switch (type){
		case INT:	mem = bgi + gi;
		if(mem > lgi){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gi++;
		break;
		case DOUBLE:	mem = bgd + gd;
		if(mem > lgd){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gd++;
		break;
		case STRING:	mem = bgs + gs;
		if(mem > lgs){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gs++;
		break;
		case BOOLEAN:	mem = bgb + gb;
		if(mem > lgb){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		gb++;
		break;
		}
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(vis, type, 1, gen.size(), mem)));
		} else {
		cout << "PREVIOUSLY DECLARED METHOD: " << name << '\n';
		err = TRUE;
		}
		
		Expect(38 /* "(" */);
		if (StartOf(3)) {
			Param();
		}
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (StartOf(1)) {
			Decl();
		}
		while (StartOf(2)) {
			Estatuto();
		}
		Return();
		Expect(41 /* "}" */);
		name = "";
		gen.push_back(Cuadruplo(RET, -1, -1, -1));
}

void Parser::MetodoV() {
		vis = type = -1; li = ld = lb = ls = ti = td = tb = ts = 0;
		Expect(_tVoi);
		Expect(_idM);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(vis, VOID, 1, gen.size())));
		} else {
		cout << "PREVIOUSLY DECLARED METHOD: " << name << '\n';
		err = TRUE;
		}
		
		Expect(38 /* "(" */);
		if (StartOf(3)) {
			Param();
		}
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (StartOf(1)) {
			Decl();
		}
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
		name = "";
		gen.push_back(Cuadruplo(RET, -1, -1, -1));
}

void Parser::Ciclo() {
		Expect(_tWhi);
		saltos.push(gen.size());
		Expect(38 /* "(" */);
		ExpOY();
		Expect(39 /* ")" */);
		CVariable boolRes = operandos.top();
		operandos.pop();
		if(boolRes.var_type != BOOLEAN){
		cout << "EXPRESSION MUST BE BOOL TYPE!\n";
		}else{
		gen.push_back(Cuadruplo(GTF, boolRes.dir, -1 , -1));
		saltos.push(gen.size() - 1);
		}
		Expect(40 /* "{" */);
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
		int falso = saltos.top();
		saltos.pop();
		int ret = saltos.top();
		saltos.pop();
		gen.push_back(Cuadruplo(GTO, ret, -1 , -1));
		gen[falso].res = gen.size();
		
}

void Parser::Estatuto() {
		string temp = "";
		switch (la->kind) {
		case _idV: {
			Get();
			temp = conv(t->val); 
			if (dirProc[name].vars.find(temp) != dirProc[name].vars.end()){
			operandos.push(CVariable(temp, 
			dirProc[name].vars[temp].var_type,
			dirProc[name].vars[temp].var_dim,
			dirProc[name].vars[temp].dir));
			}else if(dirProc.find(temp) != dirProc.end()){
			operandos.push(CVariable(temp, 
			dirProc[temp].att_type,
			0,
			dirProc[temp].dir));
			}else {
			cout << "UNDECLARED VARIABLE: " << temp << '\n';
			err = TRUE;
			}
			if (StartOf(4)) {
				Asig();
			} else if (la->kind == 51 /* "." */) {
				Llamada();
			} else SynErr(60);
			break;
		}
		case _idM: {
			Metodo();
			Expect(36 /* ";" */);
			break;
		}
		case _tWhi: {
			Ciclo();
			break;
		}
		case _tEsc: {
			Esc();
			break;
		}
		case _tLec: {
			Lec();
			break;
		}
		case _tCon: {
			ConG();
			break;
		}
		default: SynErr(61); break;
		}
}

void Parser::Con() {
		Expect(_tCon);
		ifs.push(1);
		Expect(38 /* "(" */);
		ExpOY();
		Expect(39 /* ")" */);
		CVariable boolRes = operandos.top();
		operandos.pop();
		if(boolRes.var_type != BOOLEAN){
		cout << "EXPRESSION MUST BE BOOL TYPE!\n";
		}else{
		gen.push_back(Cuadruplo(GTF, boolRes.dir, -1 , -1));
		saltos.push(gen.size() - 1);
		}
		Expect(40 /* "{" */);
		Estatuto();
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
		while (la->kind == _tEif) {
			Get();
			int ps = saltos.top();
			saltos.pop();
			gen.push_back(Cuadruplo(GTO, -1, -1, -1));
			saltos.push(gen.size() - 1);
			gen[ps].res = gen.size();
			Expect(38 /* "(" */);
			ExpOY();
			Expect(39 /* ")" */);
			ifs.top()++;
			CVariable boolRes = operandos.top();
			operandos.pop();
			if(boolRes.var_type != BOOLEAN){
			cout << "EXPRESSION MUST BE BOOL TYPE!\n";
			}else{
			gen.push_back(Cuadruplo(GTF, boolRes.dir, -1, -1));
			saltos.push(gen.size() - 1);
			}
			Expect(40 /* "{" */);
			Estatuto();
			while (StartOf(2)) {
				Estatuto();
			}
			Expect(41 /* "}" */);
		}
}

void Parser::Con2() {
		Expect(_tEls);
		if(gen[saltos.top()].operador != GTO){
		int ps = saltos.top();
		saltos.pop();
		gen.push_back(Cuadruplo(GTO, -1, -1, -1));
		gen[ps].res = gen.size();
		saltos.push(gen.size() - 1);
		}
		Expect(40 /* "{" */);
		Estatuto();
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
}

void Parser::ConG() {
		Con();
		if (la->kind == _tEls) {
			Con2();
		}
		int gts = ifs.top();
		ifs.pop();
		while(gts > 0){
		int ps = saltos.top();
		saltos.pop();
		if(gen[ps].operador == GTO)
		gen[ps].op1 = gen.size();
		else if (gen[ps].operador == GTF)
		gen[ps].res = gen.size();
		gts--;
		}
}

void Parser::Param() {
		string nameL; 
		Tipo();
		Expect(_idV);
		nameL = conv(t->val);
		if((dirProc.find(nameL) == dirProc.end()) && (dirProc[name].vars.find(nameL) == dirProc[name].vars.end())){
		int mem = 0;
		switch (type){
		case INT:	mem = bli + li;
		if(mem > lli){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		li++;
		break;
		case DOUBLE:	mem = bld + ld;
		if(mem > lld){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		ld++;
		break;
		case STRING:	mem = bls + ls;
		if(mem > lls){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		ls++;
		break;
		case BOOLEAN:	mem = blb + lb;
		if(mem > llb){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		lb++;
		break;
		}
		dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(type, 0, mem)));
		dirProc[name].params.push_back(type);
		} else {
		cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
		err = TRUE;
		}
		
		if (la->kind == 42 /* "," */) {
			Get();
			Param();
		}
}

void Parser::Init() {
		Expect(_idV);
		string temp = conv(t->val); 
		if(dirProc.find(temp) != dirProc.end()){
		operandos.push(CVariable(temp, 
		dirProc[temp].att_type, 
		dirProc[temp].att_mtd, 
		dirProc[temp].dir));
		}else{
		cout << "UNDECLARED VARIABLE: " << temp << '\n';
		err = TRUE;
		}
		Expect(37 /* "=" */);
		CTES();
		CVariable o2 = operandos.top();
		operandos.pop();
		CVariable o1 = operandos.top();
		operandos.pop();
		if(c.cubo[o2.var_type][o1.var_type][ASI] != -1 && 
		o1.var_dim == o2.var_dim){
		gen.push_back(Cuadruplo(ASI,o2.dir, -1, o1.dir));
		} else {
		cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
		err = TRUE;
		}
		Expect(36 /* ";" */);
}

void Parser::CTE() {
		ctype = -1;
		if (la->kind == _cteS) {
			Get();
			ctype = 2; 
		} else if (la->kind == _cteI) {
			Get();
			ctype = 0; 
		} else if (la->kind == _cteD) {
			Get();
			ctype = 1; 
		} else if (la->kind == _cteB) {
			Get();
			ctype = 3; 
		} else SynErr(62);
		string c = conv(t->val);
		if(cts.find(c) == cts.end()){
		int mem = 0;
		switch (ctype){
		case INT:	mem = bci + ci;
				if(mem > lci){
					cout << "OUT OF MEMORY!\n";
					err = true;
				}
				ci++;
				break;
		case DOUBLE:	mem = bcd + cd;
				if(mem > lcd){
					cout << "OUT OF MEMORY!\n";
					err = true;
				}
				cd++;
				break;
		case STRING:	mem = bcs + cs;
				if(mem > lcs){
					cout << "OUT OF MEMORY!\n";
					err = true;
				}
				cs++;
				break;
		case BOOLEAN:	mem = bcb + cb;
				if(mem > lcb){
					cout << "OUT OF MEMORY!\n";
					err = true;
				}
				cb++;
				break;
		}
		cts.insert(CTS::value_type(c, Constantes(ctype, mem)));
		}
}

void Parser::CTES() {
		string temp = ""; 
		if (la->kind == _idV) {
			Get();
			temp = conv(t->val);
			if(dirProc[name].vars.find(temp) != dirProc[name].vars.end()){
			operandos.push(CVariable(temp, 
			dirProc[name].vars[temp].var_type, 
			dirProc[name].vars[temp].var_dim, 
			dirProc[name].vars[temp].dir));
			} else if(dirProc.find(temp) != dirProc.end()){
			operandos.push(CVariable(temp, 
			dirProc[name].att_type, 
			0,
			dirProc[name].dir));
			} else {
			cout << "UNDECLARED VARIABLE." << '\n';
			err = TRUE;
			}
		} else if (StartOf(5)) {
			CTE();
			temp = conv(t->val);
			operandos.push(CVariable(temp, ctype, 0, cts[temp].dir));
		} else SynErr(63);
}

void Parser::Decl() {
		string nameL = ""; dim = 0;
		if (la->kind == _idO) {
			New();
		} else if (StartOf(3)) {
			Tipo();
			Expect(_idV);
			nameL = conv(t->val); int mem = 0;
			if (la->kind == 37 /* "=" */) {
				Get();
				CTES();
			} else if (la->kind == 34 /* "[" */) {
				Arr();
			} else SynErr(64);
			if(dirProc[name].vars.find(nameL) == dirProc[name].vars.end()){
			switch (type){
			case INT:	mem = bli + li;
			if(mem > lli){
			cout << "OUT OF MEMORY!\n";
			err = true;
			}
			if(dim == 0){
			li++;
			}else{
			li += dim;
			}
			break;
			case DOUBLE:	mem = bld + ld;
			if(mem > lld){
			cout << "OUT OF MEMORY!\n";
			err = true;
			}
			if(dim == 0){
			ld++;
			}else{
			ld += dim;
			}
			break;
			case STRING:	mem = bls + ls;
			if(mem > lls){
			cout << "OUT OF MEMORY!\n";
			err = true;
			}
			if(dim == 0){
			ls++;
			}else{
			ls += dim;
			}
			break;
			case BOOLEAN:	mem = blb + lb;
			if(mem > llb){
			cout << "OUT OF MEMORY!\n";
			err = true;
			}
			if(dim == 0){
			lb++;
			}else{
			lb += dim;
			}
			break;
			}
			dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(type, dim, mem)));
			} else {
			cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
			err = TRUE;
			}
			if(dim == 0){
			if(c.cubo[operandos.top().var_type][type][ASI] != -1){
			gen.push_back(Cuadruplo(ASI, operandos.top().dir, -1, mem));
			operandos.pop();
			} else {
			cout << "TYPE MISMATCH! :" << nameL << '\t' << operandos.top().name << '\n';
			operandos.pop();
			err = TRUE;
			}
			}
			while (la->kind == 42 /* "," */) {
				Get();
				Expect(_idV);
				nameL = conv(t->val); dim = 0; mem = 0;
				if (la->kind == 37 /* "=" */) {
					Get();
					CTES();
				} else if (la->kind == 34 /* "[" */) {
					Arr();
				} else SynErr(65);
				if(dirProc[name].vars.find(nameL) == dirProc[name].vars.end()){
				switch (type){
				case INT:	mem = bli + li;
				if(mem > lli){
				cout << "OUT OF MEMORY!\n";
				err = true;
				}
				if(dim == 0){
				li++;
				}else{
				li += dim;
				}
				break;
				case DOUBLE:	mem = bld + ld;
				if(mem > lld){
				cout << "OUT OF MEMORY!\n";
				err = true;
				}
				if(dim == 0){
				ld++;
				}else{
				ld += dim;
				}
				break;
				case STRING:	mem = bls + ls;
				if(mem > lls){
				cout << "OUT OF MEMORY!\n";
				err = true;
				}
				if(dim == 0){
				ls++;
				}else{
				ls += dim;
				}
				break;
				case BOOLEAN:	mem = blb + lb;
				if(mem > llb){
				cout << "OUT OF MEMORY!\n";
				err = true;
				}
				if(dim == 0){
				lb++;
				}else{
				lb += dim;
				}
				break;
				}
				dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(type, dim, mem)));
				} else {
				cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
				err = TRUE;
				}
				if(dim == 0){
				if(c.cubo[operandos.top().var_type][type][ASI] != -1){
				gen.push_back(Cuadruplo(ASI, operandos.top().dir, -1, mem));
				operandos.pop();
				} else {
				cout << "TYPE MISMATCH! :" << nameL << '\t' << operandos.top().name << '\n';
				operandos.pop();
				err = TRUE;
				}
				}
			}
		} else SynErr(66);
		Expect(36 /* ";" */);
}

void Parser::New() {
		string nameL; 
		Expect(_idO);
		Expect(_idV);
		nameL = conv(t->val);
		if((dirProc.find(nameL) == dirProc.end()) && (dirProc[name].vars.find(nameL) == dirProc[name].vars.end())){
		dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(4, 0, lcb)));
		} else {
		cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
		err = TRUE;
		}
		
		Expect(37 /* "=" */);
		Expect(_tNew);
		Expect(_idC);
		Expect(38 /* "(" */);
		if (StartOf(6)) {
			Lista();
		}
		Expect(39 /* ")" */);
}

void Parser::Esc() {
		Expect(_tEsc);
		Expect(38 /* "(" */);
		ExpOY();
		while (la->kind == 43 /* "^" */) {
			if(!oper.empty() && oper.top() == APP){
			CVariable o2 = operandos.top();
			operandos.pop();
			CVariable o1 = operandos.top();
			operandos.pop();
			int op = oper.top();
			oper.pop();
			if(c.cubo[o1.var_type][o2.var_type][op] != -1 && o1.var_dim == o2.var_dim){
			int mem = bts + ts;
			if(mem > lts){
			cout << "OUT OF MEMORY!\n";
			err = true;
			}
			ts++;
			gen.push_back(Cuadruplo(op, o1.dir, o2.dir, mem));
			operandos.push(CVariable("memoria" ,c.cubo[o1.var_type][o2.var_type][op], 0, mem));
			availNum++;
			} else {
			cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
			err = TRUE;
			}
			}
			Get();
			oper.push(APP);
			ExpOY();
		}
		if(!oper.empty() && oper.top() == APP){
		CVariable o2 = operandos.top();
		operandos.pop();
		CVariable o1 = operandos.top();
		operandos.pop();
		int op = oper.top();
		oper.pop();
		if(c.cubo[o1.var_type][o2.var_type][op] != -1 && o1.var_dim == o2.var_dim){
		int mem = bts + ts;
		if(mem > lts){
		cout << "OUT OF MEMORY!\n";
		err = true;
		}
		ts++;
		gen.push_back(Cuadruplo(op, o1.dir, o2.dir, mem));
		operandos.push(CVariable("memoria" ,c.cubo[o1.var_type][o2.var_type][op], 0, mem));
		availNum++;
		} else {
		cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
		err = TRUE;
		}
		}
		Expect(39 /* ")" */);
		CVariable strRes = operandos.top();
		operandos.pop();
		gen.push_back(Cuadruplo(WRI, strRes.dir, -1, -1));
		Expect(36 /* ";" */);
}

void Parser::Llamada() {
		Expect(51 /* "." */);
		if (la->kind == _idM) {
			Metodo();
		} else if (la->kind == _idV) {
			Get();
		} else SynErr(67);
}

void Parser::Metodo() {
		Expect(_idM);
		string name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		cout << "UNDECLARED METHOD: " << name << '\n';
		err = TRUE;
		}
		gen.push_back(Cuadruplo(ERA, dirProc[name].dirMem, -1, -1));
		Expect(38 /* "(" */);
		if (StartOf(6)) {
			Lista();
		}
		if(t_params.size() == dirProc[name].params.size()){
		for(int i = 0; i < dirProc[name].params.size(); i++){
		if (t_params.at(i).var_type != dirProc[name].params.at(i)){
		cout << "PARAMETER TYPES MISMATCH.\n";
		i = dirProc[name].params.size();
		}
		gen.push_back(Cuadruplo(PAR, t_params.at(i).dir, -1 , i+1));
		}
		}else{
		cout << "THERE IS NO METHOD WITH THAT AMOUNT OF PARAMETERS\n";
		}
		t_params.clear();
		Expect(39 /* ")" */);
		gen.push_back(Cuadruplo(GSU, dirProc[name].dir, -1, -1));
}
